Fixing the switch between exercises and stretches in search bar

--- a/assets/js/components/Workouts/WorkoutShow/WorkoutForm/style.scss
+++ b/assets/js/components/Workouts/WorkoutShow/WorkoutForm/style.scss
@@ -108,5 +108,15 @@
         border-radius: 10px;
       }
     }
+
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
+    input[type="number"] {
+      -moz-appearance: textfield;
+    }
   }
 }
